添加五轮滴水打法

--- a/GUI/baccaratplayerscreen.kv
+++ b/GUI/baccaratplayerscreen.kv
@@ -284,7 +284,7 @@
                     BoxLayout:
                         padding:[0,0,10,0]
                         LeftLabel:
-                            text:'[递进式]累计押注次数'
+                            text:'[仅递进]累计押注次数'
                         RoundNumberInput:
                             disabled: root.fifteen
                             id: stay_time
